--- a/vim/bundle/vim-templates/templates/beamer.tex
+++ b/vim/bundle/vim-templates/templates/beamer.tex
@@ -12,7 +12,6 @@
 
 %========================= Todo notes  =======================================
 
-\usepackage{xkeyval}
 \usepackage{todonotes}
 \presetkeys{todonotes}{inline}{}
 
@@ -23,7 +22,6 @@
 \usepackage{graphicx} % support the \includegraphics command and options
 \graphicspath{ {./img/} }
 %\usepackage{tikz}
-\usepackage{caption}
 \usepackage{epstopdf}
 %\usepackage{subcaption}
 
@@ -35,27 +33,19 @@
 
 \usepackage{hyperref}
 \hypersetup{
-    dvips,
-    backref=true, %permet d'ajouter des liens dans...
-    pagebackref=true,%...les bibliographies
     hyperindex=true, %ajoute des liens dans les index.
     colorlinks=false, %colorise les liens
     breaklinks=true, %permet le retour à la ligne dans les liens trop longs
     urlcolor= blue, %couleur des hyperliens
     linkcolor= black, %couleur des liens internes
-    bookmarks=true, %créé des signets pour Acrobat
 bookmarksopen=true,}
 
 %=============================================================================
 
 %========================= Other useful includes =============================
 
-\usepackage{amsmath,amssymb}
-\usepackage{array} % for better arrays (eg matrices) in maths
-\usepackage{enumerate}
-\usepackage{color} %avec un peu de couleur
 \usepackage{ifthen}
-\usepackage[absolute,overlay]{textpos} %to set som blocks position
+\usepackage[absolute,overlay]{textpos} %to set some blocks position
 %=============================================================================
 
 %========================= Beamer theme =====================================
@@ -64,69 +54,10 @@ bookmarksopen=true,}
 \mode<handout>{
     \usetheme{default}
     \setbeamercolor{background canvas}{bg=black!5}
-    \pgfpagesuselayout{4 on 1}[letterpaper,landscape,border shrink=2.5mm]
+    \pgfpagesuselayout{4 on 1}[a4paper,landscape,border shrink=2.5mm]
 }
 
-%based on Antibe theme
-\usetheme{Antibes}
-
-\newcommand{\romannum}[1]{\MakeUppercase{\romannumeral#1}}
-\newcommand{\sectnumb}{\romannum{\thesection{}}}
-
-%for white section name
-\newcommand{\sectiontitle}{}
-\newcommand{\newsection}[1]{\renewcommand{\sectiontitle}{#1}\section{#1}}
-\newcommand{\newHsection}[1]{\renewcommand{\sectiontitle}{#1}\section*{#1}}
-\newcommand{\subsectiontitle}{}
-\newcommand{\newsubsection}[1]{\renewcommand{\subsectiontitle}{#1}\subsection{#1}}
-
-
-
-%redifined tree
-\setbeamertemplate{headline}
-{%
-    %title color box
-    \begin{beamercolorbox}[wd=\paperwidth,colsep=1.5pt]{upper separation line head}
-    \end{beamercolorbox}
-    \begin{beamercolorbox}[wd=\paperwidth,ht=2.5ex,dp=1.125ex,%
-        leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}
-        \usebeamerfont{title in head/foot}\inserttitle
-    \end{beamercolorbox}
-    %section box
-    \begin{beamercolorbox}[wd=\paperwidth,ht=2.5ex,dp=1.125ex,%
-        leftskip=.3cm,rightskip=.3cm plus1fil]{section in head/foot}
-        \usebeamerfont{section in head/foot}%
-        \ifx\insertsectionhead\empty\else%
-        %hook
-        {\color{white}\hskip2pt\raise1.9pt\hbox{\vrule width0.4pt%
-        height1.875ex\vrule width 5pt height0.4pt}\hskip1pt}%
-        %section number and section title
-        \sectnumb\ \sectiontitle%
-        \ifx\insertsubsectionhead\empty\else%
-        %end of the tree
-        \ \raise1.5pt\hbox{\vrule width 5pt height0.4pt}\ %
-        %subsection number and section title
-        \thesubsection{}\ \subsectiontitle%
-        \fi%
-        \fi%
-    \end{beamercolorbox}
-}
-
-%red color theme
-\usecolortheme{beaver}
-\useinnertheme[shadow]{rounded}
-%structure color (bullets, blocks, table etc.)
-\setbeamercolor{structure}{fg=BurntOrange}
-
-% foot line
-\definecolor{lightgrey}{RGB}{230 230 230}
-\setbeamercolor{footline}{bg=lightgrey, fg=black}
-\setbeamertemplate{footline}[text line]{%
-    \begin{beamercolorbox}[wd=\paperwidth,ht=2.5ex,dp=1.125ex,%
-        leftskip=.3cm,rightskip=.3cm plus1fil]{footline}\insertshortauthor\ %
-        (\insertshortinstitute)\hfill\insertframenumber/\inserttotalframenumber%
-    \end{beamercolorbox}
-}
+\usetheme{AntibesCompact}
 %=============================================================================
 
 %========================= Title frame  ======================================
@@ -171,7 +102,6 @@ bookmarksopen=true,}
 \end{frame}
 
 <++>
-
 \newcounter{finalframe}
 \setcounter{finalframe}{\value{framenumber}}
 %Last numbered frame go here
@@ -179,11 +109,11 @@ bookmarksopen=true,}
 
 %=============================================================================
 %Uncomment next lines for uncounted backup slides & biblio
-\newHsection{Bibliography}
-\setboolean{sectiontoc}{false}
+%\section*{Bibliography}
+%\setboolean{sectiontoc}{false}
 %
-\bibliographystyle{apalike}
-\bibliography{presentation}
+%\bibliographystyle{apalike}
+%\bibliography{biblio}
 
 %========================= Backup slides =====================================
 %\newsection*{Hidden slides}
@@ -192,5 +122,6 @@ bookmarksopen=true,}
 
 %=============================================================================
 \end{document}
+
 
 
